fix(back): arreglo de test